--- a/assets/css/_nav.styl
+++ b/assets/css/_nav.styl
@@ -1,13 +1,15 @@
-#nav
-  font-family: 'bentonsansregular';
-  list-style: none
-  padding: 0px;
-  margin: 0px;
-  padding-top: 20px
-  li
-    margin-left: 40px
-    display: inline-block
-    a
-      color rgb(162, 162, 162)
-      text-decoration none
-      text-transform uppercase
+header
+  @extend .hold
+  #nav
+    font-family: 'bentonsansregular';
+    list-style: none
+    padding: 20px 20px 0px 20px;
+    margin: 0px;
+    padding-top: 20px;
+    li
+      margin-left: 40px
+      display: inline-block
+      a
+        color rgb(162, 162, 162)
+        text-decoration none
+        text-transform uppercase
