--- a/public/css/main.css
+++ b/public/css/main.css
@@ -249,22 +249,23 @@ html {
   -webkit-transform: rotateY(0deg);
 }
 .hold,
-#wrap {
+#wrap header,
+#wrap .description_hold {
   max-width: 1000px;
   margin: 0px auto;
 }
-#wrap  #wrap #nav {
+#wrap  #wrap header #nav {
     font-family: 'bentonsansregular';
     list-style: none;
-    padding: 0px;
+    padding: 20px 20px 0px 20px;
     margin: 0px;
     padding-top: 20px;
   }
-  #wrap #nav li {
+  #wrap header #nav li {
     margin-left: 40px;
     display: inline-block;
   }
-  #wrap #nav li a {
+  #wrap header #nav li a {
     color: #a2a2a2;
     text-decoration: none;
     text-transform: uppercase;
@@ -284,7 +285,7 @@ html {
     position: relative;
     font-size: 20px;
     text-transform: uppercase;
-    color: rgba(60,39,39,0.78);
+    color: rgba(0,0,0,0.78);
     filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
     opacity: 0.6;
     top: 5%;
@@ -305,24 +306,49 @@ html {
     font-weight: normal;
   }
   #wrap .description_block {
-    width: 90%;
+    position: relative;
+    width: 100%;
     margin: 0px auto;
   }
+  #wrap .description_block .fill {
+    position: absolute;
+    width: 100%;
+    background: #f7f7f7;
+    left: 0px;
+    height: 100%;
+  }
   #wrap .description_block h5 {
-    width: 30%;
+    padding-left: 3%;
+    width: 27%;
     color: #777;
     font-size: 40px;
     text-transform: uppercase;
+    position: relative;
   }
   #wrap .description_block .description {
-    width: 70%;
+    width: 67%;
+    padding-right: 3%;
     position: relative;
-    top: 54px;
+    top: 64px;
     font-size: 15px;
     line-height: 23px;
     color: #616161;
     margin-bottom: 54px;
   }
+@media screen and (max-width: 695px) {
+    #wrap .description_block h5 {
+      float: none;
+    }
+    #wrap .description_block .description {
+      width: 94%;
+      padding-left: 3%;
+      padding-right: 3%;
+      float: none;
+      top: 0px;
+      margin-top: -50px;
+      padding-bottom: 20px;
+    }
+}
   #wrap #people {
     text-align: center;
     position: relative;
@@ -341,6 +367,7 @@ html {
     width: 11.1111111%;
     overflow: hidden;
     position: relative;
+    cursor: pointer;
   }
   #wrap #people ul li.active img {
     z-index: 12;
@@ -350,6 +377,7 @@ html {
     height: auto;
     position: relative;
     -webkit-filter: grayscale(100%);
+    border: 0px;
   }
   #wrap #people ul li .cover {
     background: rgba(100,164,233,0.6);
@@ -390,15 +418,16 @@ html {
   }
   #wrap #bio-wrap .text p.bio {
     font-size: 16px;
-    line-height: 25px;
-  }
-  #wrap #bio-wrap .text p.bio b {
-    color: #777;
+    line-height: 37px;
   }
   #wrap #bio-wrap .text b {
     display: block;
     margin-bottom: 10px;
     font-weight: normal;
+  }
+  #wrap #bio-wrap .text p.links {
+    display: inline-block;
+    margin-top: 10px;
   }
  {
   padding-top: 20px;
@@ -407,18 +436,18 @@ html {
 
 
 }
-#wrap #nav {
+#wrap header #nav {
   font-family: 'bentonsansregular';
   list-style: none;
-  padding: 0px;
+  padding: 20px 20px 0px 20px;
   margin: 0px;
   padding-top: 20px;
 }
-#wrap #nav li {
+#wrap header #nav li {
   margin-left: 40px;
   display: inline-block;
 }
-#wrap #nav li a {
+#wrap header #nav li a {
   color: #a2a2a2;
   text-decoration: none;
   text-transform: uppercase;
@@ -438,7 +467,7 @@ html {
   position: relative;
   font-size: 20px;
   text-transform: uppercase;
-  color: rgba(60,39,39,0.78);
+  color: rgba(0,0,0,0.78);
   filter: progid:DXImageTransform.Microsoft.Alpha(Opacity=60);
   opacity: 0.6;
   top: 5%;
@@ -459,23 +488,48 @@ html {
   font-weight: normal;
 }
 #wrap .description_block {
-  width: 90%;
+  position: relative;
+  width: 100%;
   margin: 0px auto;
 }
+#wrap .description_block .fill {
+  position: absolute;
+  width: 100%;
+  background: #f7f7f7;
+  left: 0px;
+  height: 100%;
+}
 #wrap .description_block h5 {
-  width: 30%;
+  padding-left: 3%;
+  width: 27%;
   color: #777;
   font-size: 40px;
   text-transform: uppercase;
+  position: relative;
 }
 #wrap .description_block .description {
-  width: 70%;
+  width: 67%;
+  padding-right: 3%;
   position: relative;
-  top: 54px;
+  top: 64px;
   font-size: 15px;
   line-height: 23px;
   color: #616161;
   margin-bottom: 54px;
+}
+@media screen and (max-width: 695px) {
+  #wrap .description_block h5 {
+    float: none;
+  }
+  #wrap .description_block .description {
+    width: 94%;
+    padding-left: 3%;
+    padding-right: 3%;
+    float: none;
+    top: 0px;
+    margin-top: -50px;
+    padding-bottom: 20px;
+  }
 }
 #wrap #people {
   text-align: center;
@@ -495,6 +549,7 @@ html {
   width: 11.1111111%;
   overflow: hidden;
   position: relative;
+  cursor: pointer;
 }
 #wrap #people ul li.active img {
   z-index: 12;
@@ -504,6 +559,7 @@ html {
   height: auto;
   position: relative;
   -webkit-filter: grayscale(100%);
+  border: 0px;
 }
 #wrap #people ul li .cover {
   background: rgba(100,164,233,0.6);
@@ -544,13 +600,14 @@ html {
 }
 #wrap #bio-wrap .text p.bio {
   font-size: 16px;
-  line-height: 25px;
-}
-#wrap #bio-wrap .text p.bio b {
-  color: #777;
+  line-height: 37px;
 }
 #wrap #bio-wrap .text b {
   display: block;
   margin-bottom: 10px;
   font-weight: normal;
+}
+#wrap #bio-wrap .text p.links {
+  display: inline-block;
+  margin-top: 10px;
 }
