--- a/public/css/main.css
+++ b/public/css/main.css
@@ -429,8 +429,38 @@ html {
     display: inline-block;
     margin-top: 10px;
   }
+  #wrap .register_container {
+    text-align: center;
+  }
+  #wrap .register_container .register {
+    background: #cf3646;
+    color: #fff;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-decoration: none;
+    padding: 20px;
+    -webkit-border-radius: 3px;
+    -moz-border-radius: 3px;
+    -o-border-radius: 3px;
+    -ms-border-radius: 3px;
+    border-radius: 3px;
+    -webkit-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+    -moz-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+    -o-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+    -ms-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+    box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+    -webkit-transition: background 400ms;
+    -moz-transition: background 400ms;
+    -o-transition: background 400ms;
+    -ms-transition: background 400ms;
+    transition: background 400ms;
+  }
+  #wrap .register_container .register:hover {
+    background: #ee5363;
+  }
  {
   padding-top: 20px;
+
 
 
 
@@ -610,4 +640,33 @@ html {
 #wrap #bio-wrap .text p.links {
   display: inline-block;
   margin-top: 10px;
+}
+#wrap .register_container {
+  text-align: center;
+}
+#wrap .register_container .register {
+  background: #cf3646;
+  color: #fff;
+  font-weight: bold;
+  text-transform: uppercase;
+  text-decoration: none;
+  padding: 20px;
+  -webkit-border-radius: 3px;
+  -moz-border-radius: 3px;
+  -o-border-radius: 3px;
+  -ms-border-radius: 3px;
+  border-radius: 3px;
+  -webkit-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+  -moz-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+  -o-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+  -ms-box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+  box-shadow: inset 0px 1px 0px rgba(255,255,255,0.35);
+  -webkit-transition: background 400ms;
+  -moz-transition: background 400ms;
+  -o-transition: background 400ms;
+  -ms-transition: background 400ms;
+  transition: background 400ms;
+}
+#wrap .register_container .register:hover {
+  background: #ee5363;
 }
