--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@
       li
         a(href="#about") about
       li
-        a(href="#register") register
+        a(href="https://spb.io/s/UgSGF27RIJ") register
       li
         a(href="#people") staff
     .cl
@@ -13,7 +13,8 @@
     h1 TID Workshop 2013
     .text_wrap
       h4 Examining the thought behind the image
-
+  .register_container
+    a.register(href="https://spb.io/s/UgSGF27RIJ") Register Now
   .description_container
     .description_block
       .description_hold
