add email and calendar

--- a/assets/css/_people.styl
+++ b/assets/css/_people.styl
@@ -54,12 +54,15 @@
     text-align: left
     width: 70%
     margin-left: 10%
+    margin-bottom: 20px
     p
       margin: 0px
       @extend .light
       &.bio
         font-size: 16px
-        line-height: 37px
+        line-height: 28px
+        max-height: 500px
+        overflow: auto
     b
       display: block
       margin-bottom: 10px
