--- a/views/index.jade
+++ b/views/index.jade
@@ -2,11 +2,11 @@
   header
     ul#nav.right
       li
-        a(href="#about") about
-      li
         a(href="https://spb.io/s/UgSGF27RIJ") register
       li
         a(href="#people") staff
+      li
+        a(href="mailto:ross@imagedeconstructed.com", target="_blank") contact
     .cl
   .cl
   #hero
@@ -36,6 +36,10 @@
         h5.left INFO.
         .description.right Students are encouraged to bring their gear for some limited shooting exercises. </br> Time will be available for portfolio advice/feedback.
         .cl
+  #calendar-wrap
+    .inner
+      h5 Calendar.
+      |<iframe src="https://www.google.com/calendar/embed?src=cv755f328lk0fn27lg4li26qjs%40group.calendar.google.com&showTitle=0&showNav=0&showDate=0&showPrint=0&showTabs=0&mode=WEEK&showTz=0&ctz=America/New_York&dates=20130320%2F20130324" style="border: 0" width="600" height="300" frameborder="0" scrolling="no"></iframe>
   #people
     ul
       - [{name: 'preston', img: "/img/preston.jpeg"},{name: 'chad', img: "/img/chads.jpg"},{name: 'justin', img: "/img/justincook.jpg"},{name: 'logan', img: "/img/logan1.jpg"},{name: 'martin', img: "/img/Martin_Smith_Rodden_1.jpg"},{name: 'melissa', img: "/img/melissa.jpg"},{name: 'pattie', img: '/img/pattie.jpg'},{name: 'scott', img: "/img/ScottStrazzanteMug.jpg"},{name: 'ross', img:"/img/rosst.jpg"}].forEach(function(elm, index){
