add Facebook meta

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -2,6 +2,11 @@
 html
   head
     title TID 2013 workshop
+    |<meta property="og:title" content="TID 2013 workshop"/>
+    |<meta property="og:url" content="http://www.tidworkshop.org/"/>
+    |<meta property="og:image" content="img/facebook.png"/>
+    |<meta property="og:site_name" content="The Image Deconstructed Workshop 2013"/>
+    |<meta property="og:description" content="The Image, Deconstructed will hold a three-day workshop in conjunction with The University of North Carolina at Chapel Hill. Our mission is to help participants gain a better understanding of a purposeful, mental approach to visual communication."/>
     link(rel='stylesheet', href='/css/main.css')
   body
     != yield
