add hotel location and add myself to the website

--- a/assets/css/_people.styl
+++ b/assets/css/_people.styl
@@ -2,6 +2,17 @@
   text-align: center
   position relative
   padding: 20px 0
+  h5
+    width: 97%;
+    color: #FFF;
+    text-align: left;
+    font-size: 40px;
+    text-transform: uppercase;
+    position: relative;
+    margin: 0px
+    padding-bottom: 20px
+    left: 12%
+    @extend .bold
   ul
     list-style: none
     position relative
@@ -11,7 +22,7 @@
     padding: 0px
     li
       display: inline-block
-      width: 11.1111111%
+      width: 10%
       overflow: hidden
       position: relative
       cursor: pointer
