--- a/views/layout.jade
+++ b/views/layout.jade
@@ -7,6 +7,8 @@ html
     |<meta property="og:image" content="http://www.tidworkshop.org/facebook.png"/>
     |<meta property="og:site_name" content="The Image Deconstructed Workshop 2013"/>
     |<meta property="og:description" content="The Image, Deconstructed will hold a three-day workshop in conjunction with The University of North Carolina at Chapel Hill. Our mission is to help participants gain a better understanding of a purposeful, mental approach to visual communication."/>
+    |<script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
+    |<link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' />
     link(rel='stylesheet', href='/css/main.css')
   body
     != yield
