[fix] box sizing issue with people label

--- a/assets/css/_people.styl
+++ b/assets/css/_people.styl
@@ -3,7 +3,7 @@
   position relative
   padding: 20px 0
   h5
-    width: 97%;
+    width: 85%;
     color: #FFF;
     text-align: left;
     font-size: 40px;
@@ -11,7 +11,7 @@
     position: relative;
     margin: 0px
     padding-bottom: 20px
-    left: 12%
+    padding-left: 12%
     @extend .bold
   ul
     list-style: none
