add jared to the site

--- a/views/index.jade
+++ b/views/index.jade
@@ -45,7 +45,7 @@
     .inner
       h5 The Staff.
     ul
-      - [{name: 'preston', img: "/img/preston.jpeg"},{name: 'chad', img: "/img/chads.jpg"},{name: 'justin', img: "/img/justincook.jpg"},{name: 'sam', img: '/img/sam.jpg'},{name: 'logan', img: "/img/logan1.jpg"},{name: 'martin', img: "/img/Martin_Smith_Rodden_1.jpg"},{name: 'melissa', img: "/img/melissa.jpg"},{name: 'pattie', img: '/img/pattie.jpg'},{name: 'scott', img: "/img/ScottStrazzanteMug.jpg"},{name: 'ross', img:"/img/rosst.jpg"}, {name: 'mike', img:"/img/miked.jpeg"}].forEach(function(elm, index){
+      - [{name: 'preston', img: "/img/preston.jpeg"},{name: 'chad', img: "/img/chads.jpg"},{name: 'justin', img: "/img/justincook.jpg"},{name: 'sam', img: '/img/sam.jpg'},{name: 'logan', img: "/img/logan1.jpg"},{name: 'martin', img: "/img/Martin_Smith_Rodden_1.jpg"},{name: 'melissa', img: "/img/melissa.jpg"},{name: 'pattie', img: '/img/pattie.jpg'},{name: 'scott', img: "/img/ScottStrazzanteMug.jpg"},{name: 'ross', img:"/img/rosst.jpg"}, {name: 'mike', img:"/img/miked.jpeg"}, {name: 'jared', img:"/img/jared.jpg"}].forEach(function(elm, index){
         li
           img(src="#{elm.img}", data-id="#{elm.name}")
           .cover
