add a max with to the people

--- a/assets/css/_people.styl
+++ b/assets/css/_people.styl
@@ -20,6 +20,8 @@
     margin: 0px
     font-size: 0px
     padding: 0px
+    max-width: 900px
+    margin: 0px auto
     li
       display: inline-block
       width: 17%
