add GA tracking

--- a/views/layout.jade
+++ b/views/layout.jade
@@ -9,6 +9,16 @@ html
     |<meta property="og:description" content="The Image, Deconstructed will hold a three-day workshop in conjunction with The University of North Carolina at Chapel Hill. Our mission is to help participants gain a better understanding of a purposeful, mental approach to visual communication."/>
     |<script src='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.js'></script>
     |<link href='http://api.tiles.mapbox.com/mapbox.js/v0.6.7/mapbox.css' rel='stylesheet' />
+    | <script type="text/javascript">
+    |   var _gaq = _gaq || [];
+    |   _gaq.push(['_setAccount', 'UA-100642-26']);
+    |   _gaq.push(['_trackPageview']);
+    |   (function() {
+    |     var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+    |     ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+    |     var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+    |   })();
+    | </script>
     link(rel='stylesheet', href='/css/main.css')
   body
     != yield
