add deb to the site

--- a/assets/css/_people.styl
+++ b/assets/css/_people.styl
@@ -28,6 +28,7 @@
       overflow: hidden
       position: relative
       cursor: pointer
+      margin: 9px
       &.active
         img
           z-index: 12
@@ -44,6 +45,8 @@
         position: absolute
         top 0
         left 0
+        &:hover
+          background rgba(100, 164, 233, 0.4)
   .background
     position absolute
     height: 100%
